--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2"
+    "react-scripts": "4.0.2",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "set PORT=3002 && react-scripts start",
@@ -34,8 +35,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "react-router-dom": "^5.2.0",
-    "styled-components": "^5.2.1"
-  }
+  "devDependencies": {}
 }
